--- a/my-app/src/components/search/Search.module.css
+++ b/my-app/src/components/search/Search.module.css
@@ -9,6 +9,7 @@
   background-color: #ffffff;
   box-shadow: 0px 4px 33px rgba(0, 0, 0, 0.04);
   border-radius: 16px;
+  margin-bottom: 24px;
 }
 .sign {
   position: relative;
@@ -51,7 +52,7 @@ input {
 }
 .error_message {
   position: absolute;
-  bottom: -19px;
+  bottom: -19px; /*отступ 7 пикселей + высота текста*/
   left: 0;
   font-family: "Roboto";
   font-style: normal;
@@ -60,6 +61,7 @@ input {
   line-height: 14px;
   color: #eb1717;
 }
+/* Динамический стиль */
 .error {
   color: #eb1717;
 }
