--- a/my-app/src/components/header/Header.module.css
+++ b/my-app/src/components/header/Header.module.css
@@ -1,6 +1,7 @@
 .header {
   display: flex;
   justify-content: space-between;
+  padding: 32px 0 32px 0;
 }
 .header_name {
   font-family: "Roboto";
@@ -9,6 +10,7 @@
   font-size: 24px;
   line-height: 28px;
   color: #424242;
+  margin: 0;
 }
 .login_logout {
   display: flex;
